backend/global_coverage_2.txt
============================= test session starts =============================
platform win32 -- Python 3.13.5, pytest-9.0.2, pluggy-1.6.0
rootdir: C:\Users\van Houten\accounting_erp_software\backend
configfile: pytest.ini
plugins: anyio-4.12.1, asyncio-1.3.0, cov-7.0.0
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 32 items / 1 error

=================================== ERRORS ====================================
____________________ ERROR collecting tests/test_engine.py ____________________
..\venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\venv\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_engine.py:4: in <module>
    from core.engine import GameEngine
E     File "C:\Users\van Houten\accounting_erp_software\backend\core\engine.py", line 739
E       async def _record_player_report(self, logs: List[str]):
E   SyntaxError: expected 'except' or 'finally' block
=========================== short test summary info ===========================
ERROR tests/test_engine.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.79s ===============================
